# iot-project

./: .gitignore  DOC.md  README.md  pyproject.toml  requirements.txt
centralized/: datamodule.py  trainer.py
datasets/: short_train.csv  test.csv  train.csv
federated/: Documentation.md  client.py  datamodule.py  main.py  model.py  notebook.ipynb  server.py  trainer.py
federated/posture_classifier/: posture_analyzer.py
logs/federated_posture_iid/version_0/: events.out.tfevents.1749583470.cachyos-federico.38793.0
logs/federated_posture_iid/version_1/: events.out.tfevents.1749583490.cachyos-federico.38855.0
logs/federated_posture_iid/version_2/: events.out.tfevents.1749583566.cachyos-federico.39045.0
logs/federated_posture_iid/version_2/checkpoints/: federated-round-10-acc-98.43.ckpt
logs/federated_posture_iid/version_3/: events.out.tfevents.1749583616.cachyos-federico.39586.0
logs/federated_posture_iid/version_3/checkpoints/: federated-round-00-acc-88.83.ckpt  federated-round-20-acc-98.78.ckpt  federated-round-29-acc-99.48.ckpt
logs/federated_posture_non_iid/version_0/: events.out.tfevents.1749583569.cachyos-federico.39045.1
logs/federated_posture_non_iid/version_0/checkpoints/: federated-round-00-acc-92.32.ckpt  federated-round-10-acc-98.43.ckpt
logs/federated_posture_non_iid/version_1/: events.out.tfevents.1749583619.cachyos-federico.39586.1
logs/federated_posture_non_iid/version_1/checkpoints/: federated-round-20-acc-98.95.ckpt  federated-round-29-acc-98.60.ckpt
posture_classifier/: main.py  output.csv  posture_analyzer.py
