[project]
name = "iot-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "imbalanced-learn==0.11.0",
    "lightning[extra]>=2.5.1.post0",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pyqt6>=6.9.1",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
]

